fixtures/invalid/22-v0.5-long-signature/input.anatomy
anatomy_version = "0.5"
tagline = "Long signature exceeds maxLength."

[identity]
fingerprint = "jtambp6hxrw6sdkdsnfk"

[identity.stack]
id = "typescript"
hash = "jtamb"

[identity.form]
id = "typescript-library"
hash = "p6hxr"

[identity.domain]
id = "developer-tooling"
hash = "w6sdk"

[identity.function]
id = "anatomy-file-validator"
hash = "dsnfk"

[[interface.exports]]
symbol = "validate"
kind = "function"
summary = "Validate a .anatomy file"
signature = "(input: string, opts: ValidateOpts, extra: SomethingElse, another: Type, yetAnother: LongType, andMore: EvenMoreTypes, finalParam: ThisMakesItTooLong, extra2: MoreTypes) => ValidationResultWithLotsOfDetails"

[generated]
at = 2026-05-06T12:00:00.000Z
by = "anatomy-cli@0.5.0"
model = "none"
schema = "https://anatomy.dev/spec/0.5/schema.json"
